src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */

:root {
	--bg: 255, 255, 255;
	--text: 17, 17, 17;
	--muted: 90, 90, 90;
	--border: 225, 225, 225;
	--accent: 51, 102, 204;
	--accent-soft: 51, 102, 204;
	--box-shadow: 0 1px 2px rgba(0, 0, 0, 0.06);
	--font-heading: "Inter", sans-serif;
	--font-body: "Inter", sans-serif;
}
@font-face {
	font-family: "Atkinson";
	src: url("/fonts/atkinson-regular.woff") format("woff");
	font-weight: 400;
	font-style: normal;
	font-display: swap;
}
@font-face {
	font-family: "Atkinson";
	src: url("/fonts/atkinson-bold.woff") format("woff");
	font-weight: 700;
	font-style: normal;
	font-display: swap;
}
body {
	font-family: var(--font-body);
	margin: 0;
	padding: 0;
	text-align: left;
	background: rgb(var(--bg));
	word-wrap: break-word;
	overflow-wrap: break-word;
	color: rgb(var(--text));
	font-size: 20px;
	line-height: 1.7;
}
main {
	width: 760px;
	max-width: calc(100% - 2em);
	margin: auto;
	padding: 3.25em 1em;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0 0 0.5rem 0;
	color: rgb(var(--text));
	line-height: 1.2;
	font-family: var(--font-heading);
}
h1 {
	font-size: 2.5em;
}
h2 {
	font-size: 1.75em;
}
h3 {
	font-size: 1.4em;
}
h4 {
	font-size: 1.563em;
}
h5 {
	font-size: 1.25em;
}
strong,
b {
	font-weight: 700;
}
a {
	color: rgb(var(--accent));
	text-decoration: none;
}
a:visited {
	color: #795cb2;
}
a:hover {
	color: rgb(var(--accent));
}
p {
	margin-bottom: 1em;
}
.prose p {
	margin-bottom: 2em;
}
textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
	border-radius: 8px;
}
code {
	padding: 2px 5px;
	background-color: rgb(245, 245, 245);
	border-radius: 2px;
}
pre {
	padding: 1.5em;
	border-radius: 8px;
}
pre > code {
	all: unset;
}
blockquote {
	border-left: 3px solid rgb(var(--border));
	padding: 0 0 0 20px;
	margin: 0;
	font-size: 1em;
}
hr {
	border: none;
	border-top: 1px solid rgb(var(--border));
}
@media (max-width: 720px) {
	body {
		font-size: 18px;
	}
	main {
		padding: 1em;
	}
}

.sr-only {
	border: 0;
	padding: 0;
	margin: 0;
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
	clip: rect(1px 1px 1px 1px);
	/* maybe deprecated but we need to support legacy browsers */
	clip: rect(1px, 1px, 1px, 1px);
	/* modern browsers, clip-path works inwards from each corner */
	clip-path: inset(50%);
	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
	white-space: nowrap;
}

